// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel should match snapshot 1`] = `
<body>
  <div>
    <div
      class="reapit-modal-wrapper svelte-1w7voj9"
    >
      <div>
        <div
          class="light-box-enlarge-image-modal svelte-19txmtp"
          style="width: 819.2px; height: 614.4000000000001px;"
        >
          <img
            alt="Current carousel display image"
            class="light-box-enlarge-image svelte-19txmtp"
            src="current-display-image-url"
          />
           
          <div
            class="light-box-widget-container svelte-19txmtp"
          >
            <div>
              <button
                class="light-box-widget-prev-button"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  id=""
                  role="img"
                  style="height:1em;vertical-align:-.125em;overflow:visible;"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(256 256)"
                  >
                    <g
                      transform=""
                    >
                      <path
                        d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                        fill="currentColor"
                        transform="translate(-256 -256)"
                      />
                    </g>
                  </g>
                </svg>
                
              </button>
               
              <span
                data-testid="light-box-widget-item-quantity"
              >
                1
                 of 
                10
              </span>
               
              <button
                class="light-box-widget-next-button svelte-19txmtp"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  id=""
                  role="img"
                  style="height:1em;vertical-align:-.125em;overflow:visible;"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(256 256)"
                  >
                    <g
                      transform=""
                    >
                      <path
                        d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                        fill="currentColor"
                        transform="translate(-256 -256)"
                      />
                    </g>
                  </g>
                </svg>
                
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`LightBox should match snapshot 1`] = `
<body>
  <div>
    <div
      class="light-box-container svelte-1774wwa"
    >
      <div
        class="light-box-current-display-image-container svelte-1774wwa"
      >
        <img
          alt="Light box current display image"
          class="light-box-current-display-image svelte-1774wwa"
        />
      </div>
       
      
       
      <div
        class="light-box-widget-container"
      >
        <div
          class="light-box-widget-left-section"
        >
          <button>
            <svg
              aria-hidden="true"
              class=""
              id=""
              role="img"
              style="height:1em;vertical-align:-.125em;overflow:visible;"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(256 256)"
              >
                <g
                  transform=""
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"
                    fill="currentColor"
                    transform="translate(-256 -256)"
                  />
                </g>
              </g>
            </svg>
            
            
        Start slideshow
          </button>
        </div>
         
        <div>
          <button
            class="light-box-widget-prev-button"
          >
            <svg
              aria-hidden="true"
              class=""
              id=""
              role="img"
              style="height:1em;vertical-align:-.125em;overflow:visible;"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(256 256)"
              >
                <g
                  transform=""
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                    fill="currentColor"
                    transform="translate(-256 -256)"
                  />
                </g>
              </g>
            </svg>
            
          </button>
           
          <span
            data-testid="light-box-widget-item-quantity"
          >
            1
             of 
            0
          </span>
           
          <button
            class="light-box-widget-next-button"
          >
            <svg
              aria-hidden="true"
              class=""
              id=""
              role="img"
              style="height:1em;vertical-align:-.125em;overflow:visible;"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(256 256)"
              >
                <g
                  transform=""
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                    fill="currentColor"
                    transform="translate(-256 -256)"
                  />
                </g>
              </g>
            </svg>
            
          </button>
        </div>
         
        <div
          class="light-box-widget-right-section"
        >
          <button
            class="light-box-enlarge-image-button svelte-lg8cgl"
          >
            <svg
              aria-hidden="true"
              class=""
              id=""
              role="img"
              style="height:1em;vertical-align:-.125em;overflow:visible;"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(256 256)"
              >
                <g
                  transform=""
                >
                  <path
                    d="M304 192v32c0 6.6-5.4 12-12 12h-56v56c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-56h-56c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h56v-56c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v56h56c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z"
                    fill="currentColor"
                    transform="translate(-256 -256)"
                  />
                </g>
              </g>
            </svg>
            
            
      Enlarge
          </button>
           
          <span>
            Picture No.
            0
          </span>
        </div>
      </div>
       
      <div
        class="light-box-carousel-container svelte-11fmifw"
      >
        <div
          class="light-box-carousel-slider svelte-11fmifw"
          style="transform: translateX(0px);"
        />
         
        <button
          class="light-box-carousel-prev-button svelte-11fmifw"
        >
          <svg
            aria-hidden="true"
            class=""
            id=""
            role="img"
            style="height:1em;vertical-align:-.125em;overflow:visible;"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform=""
              >
                <path
                  d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
          
        </button>
         
        <button
          class="light-box-carousel-next-button svelte-11fmifw"
        >
          <svg
            aria-hidden="true"
            class=""
            id=""
            role="img"
            style="height:1em;vertical-align:-.125em;overflow:visible;"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(256 256)"
            >
              <g
                transform=""
              >
                <path
                  d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  fill="currentColor"
                  transform="translate(-256 -256)"
                />
              </g>
            </g>
          </svg>
          
        </button>
        <object
          aria-hidden="true"
          data="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
          tabindex="-1"
          type="text/html"
        />
      </div>
    </div>
  </div>
</body>
`;
